--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,6 @@ Description: Implements weighted estimation in Cox regression as proposed by
 Depends: R (>= 3.0.2), survival
 Suggests: knitr, rmarkdown, testthat
 NeedsCompilation: yes
-License: GPL-2
+License: GPL-3 + file LICENSE
 VignetteBuilder: knitr
 RoxygenNote: 7.1.0
