--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,10 @@ Type: Package
 Title: Weighted Estimation in Cox Regression
 Version: 4.0.2
 Date: 2020-06-16
-Authors@R: c(person("Georg", "Heinze", role=c("aut","cre"), email="georg.heinze@meduniwien.ac.at"),
-           person("Meinhard", "Ploner", role="aut",),
-     		person("Daniela", "Dunkler", role="aut"))
+Authors@R: c(
+    person("Daniela", "Dunkler", email="daniela.dunkler@meduniwien.ac.at", role=c("aut", "cre")),
+    person("Georg", "Heinze", role="aut"),
+    person("Meinhard", "Ploner", role="aut"))
 Description: Implements weighted estimation in Cox regression as proposed by
              Schemper, Wakounig and Heinze (Statistics in Medicine, 2009, 
              <doi:10.1002/sim.3623>) and as described in Dunkler, Ploner, Schemper and 
