--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: coxphw
 Type: Package
 Title: Weighted Estimation in Cox Regression
-Version: 4.0.2
-Date: 2020-06-16
+Version: 4.0.3
+Date: 2023-10-31
 Authors@R: c(
     person("Daniela", "Dunkler", email="daniela.dunkler@meduniwien.ac.at", role=c("aut", "cre")),
     person("Georg", "Heinze", role="aut"),
@@ -23,4 +23,7 @@ Suggests: knitr, rmarkdown, testthat
 NeedsCompilation: yes
 License: GPL-3
 VignetteBuilder: knitr
-RoxygenNote: 7.1.0
+RoxygenNote: 7.2.3
+Encoding: UTF-8
+URL: https://github.com/biometrician/coxphw
+BugReports: https://github.com/biometrician/coxphw/issues
